-
Bug
-
Resolution: Done
-
P2: Important
-
6.2.4, 6.3.0
-
Linux Ubuntu 20.04 with touch screen
-
-
75990e754b (qt/qtdeclarative/dev) 75990e754b (qt/tqtc-qtdeclarative/dev) 3c761b5bb0 (qt/qtdeclarative/6.4) 3c761b5bb0 (qt/tqtc-qtdeclarative/6.4) 3c761b5bb0 (qt/qtdeclarative/6.4.1), f714a79dd (tqtc/lts-6.2)
The issue is with QtQuick Overlay / Popup and the CloseOnPressOutside close policy when using touch screen.
To reproduce the issue.
- Run the attached example.
- Using a touch screen, click a button which opens a popup menu and close it with clicking outside of it.
- Repeat the same until the popup menu gets stuck and is not closed. Usually takes 2-3 open and close to occur.
The expected behavior is that the popup menu closes. If the ESC from the keyboard or a mouse click is used outside the menu it is closed as expected. If the dynamic menu creation option is checked in the example when it re-creates the popup menu component on each button click the issue is not occurring.
- relates to
-
QTBUG-103811 Drawer: Different behavior with mouse & touch input
-
- Closed
-
For Gerrit Dashboard: QTBUG-103268 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
439894,4 | QQuickPopup: forget touchId when closed on press outside | 6.4 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
439895,5 | QQuickPopup: forget touchId when closed on press outside | tqtc/lts-6.2 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |
439938,4 | QQuickPopup: forget touchId when closed on press outside | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |