QQuickPopup: forget touchId when closed on press outside

QQuickPopupPrivate::touchId became dangling state when a popup is closed
by pressing a touchpoint outside (closePolicy CloseOnPressOutside).
The menu doesn't receive the release event, and the overlay filters the
release after the menu is already closed, so we need to reset the stored
touchId immediately.

Fixes: QTBUG-103268
Change-Id: I99ff065b707b4b5f123021368e9d71f2c4b2ca70
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit 75990e754bf18501583ea38cb0270a52bc2860cf)
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>